EXTRA_DIST =

pkgicon16dir = @datadir@/icons/hicolor/16x16/apps
pkgicon16_DATA = 16x16/plank.svg
EXTRA_DIST += $(pkgicon16_DATA)

pkgicon22dir = @datadir@/icons/hicolor/22x22/apps
pkgicon22_DATA = 22x22/plank.svg
EXTRA_DIST += $(pkgicon22_DATA)

pkgicon24dir = @datadir@/icons/hicolor/24x24/apps
pkgicon24_DATA = 24x24/plank.svg
EXTRA_DIST += $(pkgicon24_DATA)

pkgicon32dir = @datadir@/icons/hicolor/32x32/apps
pkgicon32_DATA = 32x32/plank.svg
EXTRA_DIST += $(pkgicon32_DATA)

pkgicon48dir = @datadir@/icons/hicolor/48x48/apps
pkgicon48_DATA = 48x48/plank.svg
EXTRA_DIST += $(pkgicon48_DATA)

pkgicon64dir = @datadir@/icons/hicolor/64x64/apps
pkgicon64_DATA = 64x64/plank.svg
EXTRA_DIST += $(pkgicon64_DATA)

pkgicon128dir = @datadir@/icons/hicolor/128x128/apps
pkgicon128_DATA = 128x128/plank.svg
EXTRA_DIST += $(pkgicon128_DATA)
