EXTRA_DIST =

defaultthemedir = $(pkgdatadir)/themes/Default
defaulttheme_DATA = \
	Default/dock.theme \
	Default/hover.theme \
	$(NULL)

EXTRA_DIST += $(defaulttheme_DATA)


mattethemedir = $(pkgdatadir)/themes/Matte
mattetheme_DATA = \
	Matte/dock.theme \
	Matte/hover.theme \
	$(NULL)

EXTRA_DIST += $(mattetheme_DATA)


transparentthemedir = $(pkgdatadir)/themes/Transparent
transparenttheme_DATA = \
	Transparent/dock.theme \
	Transparent/hover.theme \
	$(NULL)

EXTRA_DIST += $(transparenttheme_DATA)
